VZDEV/src/objects/public_msgsync__x.object
<CustomObject>
    <description>public$msgsync</description>
    <externalDataSource>Heroku_Msgsync</externalDataSource>
    <externalName>public$msgsync</externalName>
    <fields>
        <fullName>leadrecord__c</fullName>
        <description>leadrecord</description>
        <externalDeveloperName>leadrecord</externalDeveloperName>
        <label>leadrecord</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lm_livetextnumber__c</fullName>
        <description>lm_livetextnumber</description>
        <externalDeveloperName>lm_livetextnumber</externalDeveloperName>
        <label>lm_livetextnumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lm_requestid__c</fullName>
        <description>lm_requestid</description>
        <externalDeveloperName>lm_requestid</externalDeveloperName>
        <label>lm_requestid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lm_responsecode__c</fullName>
        <description>lm_responsecode</description>
        <externalDeveloperName>lm_responsecode</externalDeveloperName>
        <label>lm_responsecode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lm_responsemsg__c</fullName>
        <description>lm_responsemsg</description>
        <externalDeveloperName>lm_responsemsg</externalDeveloperName>
        <label>lm_responsemsg</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lm_smsfailcounter__c</fullName>
        <description>lm_smsfailcounter</description>
        <externalDeveloperName>lm_smsfailcounter</externalDeveloperName>
        <label>lm_smsfailcounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>msgbody__c</fullName>
        <description>msgbody</description>
        <externalDeveloperName>msgbody</externalDeveloperName>
        <label>msgbody</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>msgstatus__c</fullName>
        <description>msgstatus</description>
        <externalDeveloperName>msgstatus</externalDeveloperName>
        <label>msgstatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msgtimezone__c</fullName>
        <description>msgtimezone</description>
        <externalDeveloperName>msgtimezone</externalDeveloperName>
        <label>msgtimezone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msgtonumber__c</fullName>
        <description>msgtonumber</description>
        <externalDeveloperName>msgtonumber</externalDeveloperName>
        <label>msgtonumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msgtype__c</fullName>
        <description>msgtype</description>
        <externalDeveloperName>msgtype</externalDeveloperName>
        <label>msgtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scheduleddatetime__c</fullName>
        <description>scheduleddatetime</description>
        <externalDeveloperName>scheduleddatetime</externalDeveloperName>
        <label>scheduleddatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfid__c</fullName>
        <description>sfid</description>
        <externalDeveloperName>sfid</externalDeveloperName>
        <label>sfid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smssentactualtime__c</fullName>
        <description>smssentactualtime</description>
        <externalDeveloperName>smssentactualtime</externalDeveloperName>
        <label>smssentactualtime</label>
        <type>DateTime</type>
    </fields>
    <label>Heroku msgsync</label>
    <listViews>
        <fullName>All</fullName>
        <columns>leadrecord__c</columns>
        <columns>lm_livetextnumber__c</columns>
        <columns>lm_requestid__c</columns>
        <columns>lm_responsecode__c</columns>
        <columns>lm_responsemsg__c</columns>
        <columns>lm_smsfailcounter__c</columns>
        <columns>msgbody__c</columns>
        <columns>msgstatus__c</columns>
        <columns>msgtimezone__c</columns>
        <columns>msgtonumber__c</columns>
        <columns>msgtype__c</columns>
        <columns>scheduleddatetime__c</columns>
        <columns>sfid__c</columns>
        <columns>smssentactualtime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Heroku msgsync</pluralLabel>
</CustomObject>